# grant-finder

./: .gitignore  CLAUDE.md  README.md  SKILL.md  pyproject.toml
.claude/skills/grant-finder/: SKILL.md
docs/: pilot-run.md
docs/superpowers/plans/: 2026-06-23-grant-funder-prospector-pilot.md
docs/superpowers/specs/: 2026-06-23-grant-funder-prospector-design.md
scripts/: build_index.py
src/funder_prospector/: bmf.py  cli.py  db.py  ingest.py  match.py  models.py  pipeline.py  propublica.py  rank.py  report.py
src/grant_finder/: bmf.py  cli.py  db.py  propublica.py
tests/: test_bmf.py  test_db.py  test_ingest.py  test_match.py  test_pipeline.py  test_propublica.py  test_rank.py  test_report.py
tests/fixtures/: 990pf.xml  990schedi.xml  bmf_sample.csv  org.json  search.json
