[project]
name = "funder-prospector"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["requests>=2.31", "rapidfuzz>=3.6"]

[project.scripts]
prospect = "funder_prospector.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/funder_prospector"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
