[project]
name = "grant-finder"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["requests>=2.31", "rapidfuzz>=3.6"]

[project.scripts]
grant-finder = "grant_finder.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grant_finder"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
